--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "multer": "^2.0.2",
     "nodemailer": "^7.0.5",
     "tailwindcss": "^4.1.11",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "ws": "^8.18.3"
   }
 }
